syntax = "proto3";

option csharp_namespace = "MareSynchronosShared.Protos";

package mareservices;

service ClientMessageService {
	rpc SendClientMessage (ClientMessage) returns (Empty);
}

message ClientMessage {
	MessageType type = 1;
	string message = 2;
	string uid = 3;
}

enum MessageType {
	INFO = 0;
	WARNING = 1;
	ERROR = 2;
}

message Empty { }